--- a/app/css/main.scss
+++ b/app/css/main.scss
@@ -43,10 +43,11 @@ img {
     font-weight: 500;
     line-height: 42px;
 
-    color: black;
-    -webkit-text-fill-color: white;
-    -webkit-text-stroke-width: 2px;
-    -webkit-text-stroke-color: black;
+    //color: white;
+    //-webkit-text-stroke-width: 2px;
+    //-webkit-text-stroke-color: black;
+    color: white;
+    -webkit-text-stroke: 2px black;
 }
 
 .topfont {
