--- a/app/css/main.scss
+++ b/app/css/main.scss
@@ -28,50 +28,54 @@ img {
     left: 0;
 }
 
+@font-face {
+    font-family: 'FrontFont';
+    src: url('../fonts/Impact-Regular.ttf') format('truetype');
+}
+
+@font-face {
+    font-family: 'BackFont';
+    src: url('../fonts/Impact.ttf') format('truetype');
+}
+
 .memefont {
     position: absolute;
     left: 10%;
     width: 80%;
-    height: 30%;
-    z-index: 100;
     text-align: center;
-
-    font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", "sans serif";
-    font-size: 48px;
+    //font-size: 100px;
     font-style: normal;
     font-variant: normal;
     font-weight: 500;
     line-height: 42px;
-
-    //color: white;
-    //-webkit-text-stroke-width: 2px;
-    //-webkit-text-stroke-color: black;
-    color: black;
-    //-webkit-text-stroke: 2px black;
 }
 
-.backing {
-    z-index: 5;
+.frontfont {
+    z-index: 10;
     color: white;
+    font-family: FrontFont, Impact;
+}
+
+.backfont {
+    z-index: 8;
+    color: black;
+    font-family: BackFont, Impact;
 }
 
 .topfont {
-    z-index: 10;
     top: 5%;
 }
 
 .bottomfont {
-    bottom: 5%;
+    position: absolute;
+    bottom: 50px;
+}
+
+.low {
+    position: absolute;
+    min-height: 100%;
     vertical-align: bottom;
 }
-
-#bottomfont span {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-}
-
 
 
 
