--- a/app/css/main.scss
+++ b/app/css/main.scss
@@ -79,17 +79,17 @@ img {
     line-height: 42px;
 }
 
-.frontfont {
-    z-index: 10;
-    color: white;
-    font-family: FrontFont, Impact;
-}
-
-.backfont {
-    z-index: 8;
-    color: black;
-    font-family: BackFont, Impact;
-}
+//.frontfont {
+//    z-index: 10;
+//    color: white;
+//    font-family: FrontFont, Impact;
+//}
+//
+//.backfont {
+//    z-index: 8;
+//    color: black;
+//    font-family: BackFont, Impact;
+//}
 
 #topfont-container {
     top: 0;
