--- a/app/css/main.scss
+++ b/app/css/main.scss
@@ -49,7 +49,10 @@ img {
 }
 
 #meme {
-    max-width: 100% !important;
+    max-width: 100%;
+    max-height: 100%;
+    width: 100%;
+    overflow: auto;
     padding: 0;
 }
 
